test/bad/new_arr_length.lat
int main() {
    int[] arr = new int[false];
    return 0;
}
